# flexichat

./: .gitignore  CMakeLists.txt  README.md
src/: AppSettings.cpp  AppSettings.h  ChatListModel.cpp  ChatListModel.h  ChatMessage.h  ChatWidget.cpp  ChatWidget.h  ChatWidget.ui  LMStudioClient.cpp  LMStudioClient.h  MainLogic.cpp  MainLogic.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenAITTSClient.cpp  OpenAITTSClient.h  ProfileManager.cpp  ProfileManager.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SystemPromptProfile.h  main.cpp
